--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <i class="fab fa-github" aria-hidden="true" title="Github"></i>
             <span class="sr-only">Github</span>
         </a>
-        <a target="_blank" href="https://twitter.com/TheoOliveira">
-            <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
-            <span class="sr-only">Twitter</span>
-        </a>
+<!--        <a target="_blank" href="https://twitter.com/TheoOliveira">-->
+<!--            <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>-->
+<!--            <span class="sr-only">Twitter</span>-->
+<!--        </a>-->
         <a target="_blank" href="https://dev.to/theooliveira">
             <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
             <span class="sr-only">DEV Community</span>
