--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <link rel="stylesheet" href="css/themes/white-grey.css">
     <!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
     <!-- <link rel="stylesheet" href="css/themes/yellow-black.css">-->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BKGYSBC343"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-BKGYSBC343');
+    </script>
 </head>
 <body>
 <main>
@@ -33,10 +42,10 @@
             <i class="fab fa-github" aria-hidden="true" title="Github"></i>
             <span class="sr-only">Github</span>
         </a>
-<!--        <a target="_blank" href="https://twitter.com/TheoOliveira">-->
-<!--            <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>-->
-<!--            <span class="sr-only">Twitter</span>-->
-<!--        </a>-->
+        <a target="_blank" href="https://twitter.com/TheoOliveira">
+            <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
+            <span class="sr-only">Twitter</span>
+        </a>
         <a target="_blank" href="https://dev.to/theooliveira">
             <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
             <span class="sr-only">DEV Community</span>
