--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
             <i class="fab fa-github" aria-hidden="true" title="Github"></i>
             <span class="sr-only">Github</span>
         </a>
-        <a target="_blank" href="https://twitter.com/TheoOliveira">
-            <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
-            <span class="sr-only">Twitter</span>
-        </a>
         <a target="_blank" href="https://dev.to/theooliveira">
             <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
             <span class="sr-only">DEV Community</span>
@@ -57,6 +53,10 @@
         <a target="_blank" href="https://www.linkedin.com/in/theooliveira/">
             <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
             <span class="sr-only">LinkedIn</span>
+        </a>
+        <a target="_blank" href="https://blog.theooliveira.tech">
+            <i class="fa fa-rss" aria-hidden="true" title="Blog"></i>
+            <span class="sr-only">Blog</span>
         </a>
 
     </div>
