--- a/index.html
+++ b/index.html
@@ -1,65 +1,84 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Théo Oliveira | React Frontend and Blockchain</title>
 
-    <link rel="icon" href="favicon.ico" type="image/png"/>
+    <link rel="icon" href="favicon.ico" type="image/png" />
 
-    <link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300"
+      rel="stylesheet"
+    />
+    <link
+      href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <!--	<link rel="stylesheet" href="css/themes/indigo-white.css">-->
     <!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
     <!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
     <!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
     <!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
-    <!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
-    <link rel="stylesheet" href="css/themes/white-grey.css">
+    <link rel="stylesheet" href="css/themes/white-blue.css" />
+    <!--<link rel="stylesheet" href="css/themes/white-grey.css" />-->
     <!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
     <!-- <link rel="stylesheet" href="css/themes/yellow-black.css">-->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BKGYSBC343"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-BKGYSBC343"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'G-BKGYSBC343');
+      gtag("config", "G-BKGYSBC343");
     </script>
-</head>
-<body>
-<main>
-    <div class="intro">Hello, I'm Théo!</div>
-    <div class="tagline">React Frontend | Blockchain Enthusiast | Linux Aficionado | Classic Book Lover</div>
-    <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-    <div class="icons-social">
+  </head>
+  <body>
+    <main>
+      <div class="intro">Hello, I'm Théo!</div>
+      <div class="tagline">
+        Fullstack Dev | ReactJS | NodeJS | Rust | Classic Book Lover
+      </div>
+      <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+      <div class="icons-social">
         <a target="_blank" href="https://github.com/theooliveira">
-            <i class="fab fa-github" aria-hidden="true" title="Github"></i>
-            <span class="sr-only">Github</span>
+          <i class="fab fa-github" aria-hidden="true" title="Github"></i>
+          <span class="sr-only">Github</span>
         </a>
         <a target="_blank" href="https://dev.to/theooliveira">
-            <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
-            <span class="sr-only">DEV Community</span>
+          <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
+          <span class="sr-only">DEV Community</span>
         </a>
-        <a target="_blank" href="https://stackoverflow.com/users/5853906/theo-oliveira">
-            <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
-            <span class="sr-only">StackOverflow</span>
+        <a
+          target="_blank"
+          href="https://stackoverflow.com/users/5853906/theo-oliveira"
+        >
+          <i
+            class="fab fa-stack-overflow"
+            aria-hidden="true"
+            title="StackOverflow"
+          ></i>
+          <span class="sr-only">StackOverflow</span>
         </a>
         <a target="_blank" href="https://www.linkedin.com/in/theooliveira/">
-            <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
-            <span class="sr-only">LinkedIn</span>
+          <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
+          <span class="sr-only">LinkedIn</span>
         </a>
         <a target="_blank" href="https://blog.theooliveira.tech">
-            <i class="fa fa-rss" aria-hidden="true" title="Blog"></i>
-            <span class="sr-only">Blog</span>
+          <i class="fa fa-rss" aria-hidden="true" title="Blog"></i>
+          <span class="sr-only">Blog</span>
         </a>
-
-    </div>
-</main>
-</body>
+      </div>
+    </main>
+  </body>
 </html>
