--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
           <span class="sr-only">LinkedIn</span>
         </a>
-        <a target="_blank" href="https://blog.theooliveira.tech">
+        <a target="_blank" href="https://blog.theooliveira..com.br/resume.pdf">
           <i class="fa fa-rss" aria-hidden="true" title="Blog"></i>
           <span class="sr-only">Blog</span>
         </a>
