--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
           <i class="fa fa-rss" aria-hidden="true" title="Blog"></i>
           <span class="sr-only">Blog</span>
         </a>
+        <a target="_blank" href="https://blog.theooliveira..com.br/resume.pdf">
+          <i class="fa fa-pdf-file" aria-hidden="true" title="Resume"></i>
+          <span class="sr-only">Resume</span>
+        </a>
       </div>
     </main>
   </body>
