--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
           <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
           <span class="sr-only">LinkedIn</span>
         </a>
-        <a target="_blank" href="https://blog.theooliveira..com.br/resume.pdf">
+        <a target="_blank" href="https://blog.theooliveira..com.br">
           <i class="fa fa-rss" aria-hidden="true" title="Blog"></i>
           <span class="sr-only">Blog</span>
         </a>
-        <a target="_blank" href="https://blog.theooliveira..com.br/resume.pdf">
+        <a target="_blank" href="https://theooliveira..com.br/resume.pdf">
           <i class="fa fa-pdf-file" aria-hidden="true" title="Resume"></i>
           <span class="sr-only">Resume</span>
         </a>
