--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <span class="sr-only">Blog</span>
         </a>
         <a target="_blank" href="https://theooliveira..com.br/resume.pdf">
-          <i class="fa fa-pdf-file" aria-hidden="true" title="Resume"></i>
+          <i class="fa fa-file-pdf" aria-hidden="true" title="Resume"></i>
           <span class="sr-only">Resume</span>
         </a>
       </div>
