--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <i class="fa fa-rss" aria-hidden="true" title="Blog"></i>
           <span class="sr-only">Blog</span>
         </a>
-        <a target="_blank" href="https://theooliveira..com.br/resume.pdf">
+        <a target="_blank" href="https://www.theooliveira..com.br/resume.pdf">
           <i class="fa fa-file-pdf" aria-hidden="true" title="Resume"></i>
           <span class="sr-only">Resume</span>
         </a>
